--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "plywood-druid-requester": "1.5.4",
     "plywood-mysql-requester": "1.3.1",
     "plywood-postgres-requester": "0.9.1",
+    "plywood-clickhouse-requester": "1.0.0",
     "tslint": "3.14.0",
     "typescript": "2.0.0",
     "underscore": "1.8.3",
